# BlackJack

./: .gitignore  DOWNLOADS.md  ENCRYPTED_CREDENTIALS.md  ENCRYPTED_DATA_STORAGE.md  IMPLEMENTATION_STATUS.md  INSTALL.md  INSTALLATION.md  LICENSE  Makefile  QUICK_START.md  README.md  RELEASE_GUIDE.md  SECURITY.md  UPDATE_SYSTEM.md  check-version.sh  create-release.sh  go.mod  go.sum  package.json  release.sh  setup.sh  start.sh
.github/workflows/: build-windows.yml  build.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: commands.rs  crypto.rs  fs.rs  main.rs  models.rs
cmd/blackjack/: main.go
desktop/: README.md  build.sh  run.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/web/: app.js  index.html  styles.css
dev/: README.md  build-windows-final.ps1  build-windows-fixed.ps1  build-windows-simple.ps1  build-windows.bat  build-windows.ps1
examples/: app.yaml  groups.yaml  hosts.yaml  tags.yaml
installer/: README.md
installers/: build-installers.sh
installers/linux/: install.sh
installers/windows/: blackjack-installer.nsi
internal/app/: app.go
internal/config/: config.go
internal/data/: groups.go  hosts.go  tags.go
internal/ssh/: client.go
internal/ui/: ui.go
scripts/: build-installer.sh
web-app/: app.js  index.html  login.html  styles.css  update.js
web-server/: config-encrypted.json.example  config.json  go.mod  go.sum  main.go  run.sh  setup-encryption.sh
(+21 files in other folders)
