[package]
name = "blackjack-desktop"
version = "0.1.0"
description = "BlackJack Desktop Application"
authors = ["BlackJack Team"]
license = "MIT"
repository = "https://github.com/blackjack/blackjack"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
